src/query/antlr/SQLParser.cpp

// Generated from SQL.g4 by ANTLR 4.13.2


#include "SQLListener.h"

#include "SQLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SQLParserStaticData final {
  SQLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SQLParserStaticData(const SQLParserStaticData&) = delete;
  SQLParserStaticData(SQLParserStaticData&&) = delete;
  SQLParserStaticData& operator=(const SQLParserStaticData&) = delete;
  SQLParserStaticData& operator=(SQLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sqlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SQLParserStaticData> sqlParserStaticData = nullptr;

void sqlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sqlParserStaticData != nullptr) {
    return;
  }
#else
  assert(sqlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SQLParserStaticData>(
    std::vector<std::string>{
      "sqlStatement", "statement", "listDatabases", "createDatabase", "createTable", 
      "primaryKeyDeclaration", "dropTable", "dropDatabase", "insertInto", 
      "update", "selectStatement", "deleteStatement", "useDatabase", "assignmentList", 
      "assignment", "columnList", "valueList", "columnDefinition", "condition", 
      "comparisonOperator", "value", "dataType", "databaseName", "tableName"
    },
    std::vector<std::string>{
      "", "'LIST DATABASES'", "'CREATE'", "'DATABASE'", "'TABLE'", "'('", 
      "','", "')'", "'PRIMARY'", "'KEY'", "'DROP'", "'INSERT'", "'INTO'", 
      "'VALUES'", "'UPDATE'", "'SET'", "'WHERE'", "'SELECT'", "'FROM'", 
      "'DELETE'", "'USE'", "'='", "'*'", "'AND'", "'OR'", "'>'", "'<'", 
      "'>='", "'<='", "'!='", "'TRUE'", "'FALSE'", "'INT'", "'INTEGER'", 
      "'BOOL'", "'BOOLEAN'", "'CHAR'", "'DATE'", "'.'", "", "", "", "", 
      "", "", "';'", "", "", "'NULL'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "BOOL_LITERAL", "IDENTIFIER", "STRING", "NUMBER", 
      "DATE_LITERAL", "DIGIT", "SEMICOLON", "WS", "COMMENT", "NULL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sqlParserStaticData = std::move(staticData);
}

}

SQLParser::SQLParser(TokenStream *input) : SQLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SQLParser::SQLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SQLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sqlParserStaticData->atn, sqlParserStaticData->decisionToDFA, sqlParserStaticData->sharedContextCache, options);
}

SQLParser::~SQLParser() {
  delete _interpreter;
}

const atn::ATN& SQLParser::getATN() const {
  return *sqlParserStaticData->atn;
}

std::string SQLParser::getGrammarFileName() const {
  return "SQL.g4";
}

const std::vector<std::string>& SQLParser::getRuleNames() const {
  return sqlParserStaticData->ruleNames;
}

const dfa::Vocabulary& SQLParser::getVocabulary() const {
  return sqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SQLParser::getSerializedATN() const {
  return sqlParserStaticData->serializedATN;
}


//----------------- SqlStatementContext ------------------------------------------------------------------

SQLParser::SqlStatementContext::SqlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::StatementContext* SQLParser::SqlStatementContext::statement() {
  return getRuleContext<SQLParser::StatementContext>(0);
}

tree::TerminalNode* SQLParser::SqlStatementContext::SEMICOLON() {
  return getToken(SQLParser::SEMICOLON, 0);
}


size_t SQLParser::SqlStatementContext::getRuleIndex() const {
  return SQLParser::RuleSqlStatement;
}

void SQLParser::SqlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSqlStatement(this);
}

void SQLParser::SqlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSqlStatement(this);
}

SQLParser::SqlStatementContext* SQLParser::sqlStatement() {
  SqlStatementContext *_localctx = _tracker.createInstance<SqlStatementContext>(_ctx, getState());
  enterRule(_localctx, 0, SQLParser::RuleSqlStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    statement();
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::SEMICOLON) {
      setState(49);
      match(SQLParser::SEMICOLON);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SQLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::CreateDatabaseContext* SQLParser::StatementContext::createDatabase() {
  return getRuleContext<SQLParser::CreateDatabaseContext>(0);
}

SQLParser::CreateTableContext* SQLParser::StatementContext::createTable() {
  return getRuleContext<SQLParser::CreateTableContext>(0);
}

SQLParser::DropTableContext* SQLParser::StatementContext::dropTable() {
  return getRuleContext<SQLParser::DropTableContext>(0);
}

SQLParser::DropDatabaseContext* SQLParser::StatementContext::dropDatabase() {
  return getRuleContext<SQLParser::DropDatabaseContext>(0);
}

SQLParser::InsertIntoContext* SQLParser::StatementContext::insertInto() {
  return getRuleContext<SQLParser::InsertIntoContext>(0);
}

SQLParser::UpdateContext* SQLParser::StatementContext::update() {
  return getRuleContext<SQLParser::UpdateContext>(0);
}

SQLParser::SelectStatementContext* SQLParser::StatementContext::selectStatement() {
  return getRuleContext<SQLParser::SelectStatementContext>(0);
}

SQLParser::DeleteStatementContext* SQLParser::StatementContext::deleteStatement() {
  return getRuleContext<SQLParser::DeleteStatementContext>(0);
}

SQLParser::UseDatabaseContext* SQLParser::StatementContext::useDatabase() {
  return getRuleContext<SQLParser::UseDatabaseContext>(0);
}

SQLParser::ListDatabasesContext* SQLParser::StatementContext::listDatabases() {
  return getRuleContext<SQLParser::ListDatabasesContext>(0);
}


size_t SQLParser::StatementContext::getRuleIndex() const {
  return SQLParser::RuleStatement;
}

void SQLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void SQLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

SQLParser::StatementContext* SQLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SQLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      createDatabase();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      createTable();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(54);
      dropTable();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(55);
      dropDatabase();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(56);
      insertInto();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(57);
      update();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(58);
      selectStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(59);
      deleteStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(60);
      useDatabase();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(61);
      listDatabases();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListDatabasesContext ------------------------------------------------------------------

SQLParser::ListDatabasesContext::ListDatabasesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SQLParser::ListDatabasesContext::getRuleIndex() const {
  return SQLParser::RuleListDatabases;
}

void SQLParser::ListDatabasesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterListDatabases(this);
}

void SQLParser::ListDatabasesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitListDatabases(this);
}

SQLParser::ListDatabasesContext* SQLParser::listDatabases() {
  ListDatabasesContext *_localctx = _tracker.createInstance<ListDatabasesContext>(_ctx, getState());
  enterRule(_localctx, 4, SQLParser::RuleListDatabases);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(SQLParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateDatabaseContext ------------------------------------------------------------------

SQLParser::CreateDatabaseContext::CreateDatabaseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::DatabaseNameContext* SQLParser::CreateDatabaseContext::databaseName() {
  return getRuleContext<SQLParser::DatabaseNameContext>(0);
}


size_t SQLParser::CreateDatabaseContext::getRuleIndex() const {
  return SQLParser::RuleCreateDatabase;
}

void SQLParser::CreateDatabaseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateDatabase(this);
}

void SQLParser::CreateDatabaseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateDatabase(this);
}

SQLParser::CreateDatabaseContext* SQLParser::createDatabase() {
  CreateDatabaseContext *_localctx = _tracker.createInstance<CreateDatabaseContext>(_ctx, getState());
  enterRule(_localctx, 6, SQLParser::RuleCreateDatabase);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(SQLParser::T__1);
    setState(67);
    match(SQLParser::T__2);
    setState(68);
    databaseName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateTableContext ------------------------------------------------------------------

SQLParser::CreateTableContext::CreateTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::TableNameContext* SQLParser::CreateTableContext::tableName() {
  return getRuleContext<SQLParser::TableNameContext>(0);
}

std::vector<SQLParser::ColumnDefinitionContext *> SQLParser::CreateTableContext::columnDefinition() {
  return getRuleContexts<SQLParser::ColumnDefinitionContext>();
}

SQLParser::ColumnDefinitionContext* SQLParser::CreateTableContext::columnDefinition(size_t i) {
  return getRuleContext<SQLParser::ColumnDefinitionContext>(i);
}

SQLParser::PrimaryKeyDeclarationContext* SQLParser::CreateTableContext::primaryKeyDeclaration() {
  return getRuleContext<SQLParser::PrimaryKeyDeclarationContext>(0);
}


size_t SQLParser::CreateTableContext::getRuleIndex() const {
  return SQLParser::RuleCreateTable;
}

void SQLParser::CreateTableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreateTable(this);
}

void SQLParser::CreateTableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreateTable(this);
}

SQLParser::CreateTableContext* SQLParser::createTable() {
  CreateTableContext *_localctx = _tracker.createInstance<CreateTableContext>(_ctx, getState());
  enterRule(_localctx, 8, SQLParser::RuleCreateTable);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(SQLParser::T__1);
    setState(71);
    match(SQLParser::T__3);
    setState(72);
    tableName();
    setState(73);
    match(SQLParser::T__4);
    setState(74);
    columnDefinition();
    setState(79);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(75);
        match(SQLParser::T__5);
        setState(76);
        columnDefinition(); 
      }
      setState(81);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::T__5) {
      setState(82);
      match(SQLParser::T__5);
      setState(83);
      primaryKeyDeclaration();
    }
    setState(86);
    match(SQLParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryKeyDeclarationContext ------------------------------------------------------------------

SQLParser::PrimaryKeyDeclarationContext::PrimaryKeyDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::PrimaryKeyDeclarationContext::IDENTIFIER() {
  return getToken(SQLParser::IDENTIFIER, 0);
}


size_t SQLParser::PrimaryKeyDeclarationContext::getRuleIndex() const {
  return SQLParser::RulePrimaryKeyDeclaration;
}

void SQLParser::PrimaryKeyDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimaryKeyDeclaration(this);
}

void SQLParser::PrimaryKeyDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimaryKeyDeclaration(this);
}

SQLParser::PrimaryKeyDeclarationContext* SQLParser::primaryKeyDeclaration() {
  PrimaryKeyDeclarationContext *_localctx = _tracker.createInstance<PrimaryKeyDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, SQLParser::RulePrimaryKeyDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(SQLParser::T__7);
    setState(89);
    match(SQLParser::T__8);
    setState(90);
    match(SQLParser::T__4);
    setState(91);
    match(SQLParser::IDENTIFIER);
    setState(92);
    match(SQLParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DropTableContext ------------------------------------------------------------------

SQLParser::DropTableContext::DropTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::TableNameContext* SQLParser::DropTableContext::tableName() {
  return getRuleContext<SQLParser::TableNameContext>(0);
}


size_t SQLParser::DropTableContext::getRuleIndex() const {
  return SQLParser::RuleDropTable;
}

void SQLParser::DropTableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDropTable(this);
}

void SQLParser::DropTableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDropTable(this);
}

SQLParser::DropTableContext* SQLParser::dropTable() {
  DropTableContext *_localctx = _tracker.createInstance<DropTableContext>(_ctx, getState());
  enterRule(_localctx, 12, SQLParser::RuleDropTable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(SQLParser::T__9);
    setState(95);
    match(SQLParser::T__3);
    setState(96);
    tableName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DropDatabaseContext ------------------------------------------------------------------

SQLParser::DropDatabaseContext::DropDatabaseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::DatabaseNameContext* SQLParser::DropDatabaseContext::databaseName() {
  return getRuleContext<SQLParser::DatabaseNameContext>(0);
}


size_t SQLParser::DropDatabaseContext::getRuleIndex() const {
  return SQLParser::RuleDropDatabase;
}

void SQLParser::DropDatabaseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDropDatabase(this);
}

void SQLParser::DropDatabaseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDropDatabase(this);
}

SQLParser::DropDatabaseContext* SQLParser::dropDatabase() {
  DropDatabaseContext *_localctx = _tracker.createInstance<DropDatabaseContext>(_ctx, getState());
  enterRule(_localctx, 14, SQLParser::RuleDropDatabase);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(SQLParser::T__9);
    setState(99);
    match(SQLParser::T__2);
    setState(100);
    databaseName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertIntoContext ------------------------------------------------------------------

SQLParser::InsertIntoContext::InsertIntoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::TableNameContext* SQLParser::InsertIntoContext::tableName() {
  return getRuleContext<SQLParser::TableNameContext>(0);
}

SQLParser::ColumnListContext* SQLParser::InsertIntoContext::columnList() {
  return getRuleContext<SQLParser::ColumnListContext>(0);
}

SQLParser::ValueListContext* SQLParser::InsertIntoContext::valueList() {
  return getRuleContext<SQLParser::ValueListContext>(0);
}


size_t SQLParser::InsertIntoContext::getRuleIndex() const {
  return SQLParser::RuleInsertInto;
}

void SQLParser::InsertIntoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInsertInto(this);
}

void SQLParser::InsertIntoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInsertInto(this);
}

SQLParser::InsertIntoContext* SQLParser::insertInto() {
  InsertIntoContext *_localctx = _tracker.createInstance<InsertIntoContext>(_ctx, getState());
  enterRule(_localctx, 16, SQLParser::RuleInsertInto);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(SQLParser::T__10);
    setState(103);
    match(SQLParser::T__11);
    setState(104);
    tableName();
    setState(105);
    match(SQLParser::T__4);
    setState(106);
    columnList();
    setState(107);
    match(SQLParser::T__6);
    setState(108);
    match(SQLParser::T__12);
    setState(109);
    match(SQLParser::T__4);
    setState(110);
    valueList();
    setState(111);
    match(SQLParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UpdateContext ------------------------------------------------------------------

SQLParser::UpdateContext::UpdateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::TableNameContext* SQLParser::UpdateContext::tableName() {
  return getRuleContext<SQLParser::TableNameContext>(0);
}

SQLParser::AssignmentListContext* SQLParser::UpdateContext::assignmentList() {
  return getRuleContext<SQLParser::AssignmentListContext>(0);
}

SQLParser::ConditionContext* SQLParser::UpdateContext::condition() {
  return getRuleContext<SQLParser::ConditionContext>(0);
}


size_t SQLParser::UpdateContext::getRuleIndex() const {
  return SQLParser::RuleUpdate;
}

void SQLParser::UpdateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUpdate(this);
}

void SQLParser::UpdateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUpdate(this);
}

SQLParser::UpdateContext* SQLParser::update() {
  UpdateContext *_localctx = _tracker.createInstance<UpdateContext>(_ctx, getState());
  enterRule(_localctx, 18, SQLParser::RuleUpdate);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(SQLParser::T__13);
    setState(114);
    tableName();
    setState(115);
    match(SQLParser::T__14);
    setState(116);
    assignmentList();
    setState(117);
    match(SQLParser::T__15);
    setState(118);
    condition(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectStatementContext ------------------------------------------------------------------

SQLParser::SelectStatementContext::SelectStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::ColumnListContext* SQLParser::SelectStatementContext::columnList() {
  return getRuleContext<SQLParser::ColumnListContext>(0);
}

SQLParser::TableNameContext* SQLParser::SelectStatementContext::tableName() {
  return getRuleContext<SQLParser::TableNameContext>(0);
}

SQLParser::ConditionContext* SQLParser::SelectStatementContext::condition() {
  return getRuleContext<SQLParser::ConditionContext>(0);
}


size_t SQLParser::SelectStatementContext::getRuleIndex() const {
  return SQLParser::RuleSelectStatement;
}

void SQLParser::SelectStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectStatement(this);
}

void SQLParser::SelectStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectStatement(this);
}

SQLParser::SelectStatementContext* SQLParser::selectStatement() {
  SelectStatementContext *_localctx = _tracker.createInstance<SelectStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, SQLParser::RuleSelectStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(SQLParser::T__16);
    setState(121);
    columnList();
    setState(122);
    match(SQLParser::T__17);
    setState(123);
    tableName();
    setState(126);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::T__15) {
      setState(124);
      match(SQLParser::T__15);
      setState(125);
      condition(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeleteStatementContext ------------------------------------------------------------------

SQLParser::DeleteStatementContext::DeleteStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::TableNameContext* SQLParser::DeleteStatementContext::tableName() {
  return getRuleContext<SQLParser::TableNameContext>(0);
}

SQLParser::ConditionContext* SQLParser::DeleteStatementContext::condition() {
  return getRuleContext<SQLParser::ConditionContext>(0);
}


size_t SQLParser::DeleteStatementContext::getRuleIndex() const {
  return SQLParser::RuleDeleteStatement;
}

void SQLParser::DeleteStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeleteStatement(this);
}

void SQLParser::DeleteStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SQLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeleteStatement(this);
}

SQLParser::DeleteStatementContext* SQLParser::deleteStatement() {
  DeleteStatementContext *_localctx = _tracker.createInstance<DeleteStatementContext>(_ctx, getState());
  enterRule(_localctx, 22, SQLParser::RuleDeleteStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(SQLParser::T__18);
    setState(129);
    match(SQLParser::T__17);
    setState(130);
    tableName();
    setState(133);
    _errHandler->sync(this);
